--- a/src/app/components/plan-it/plan-it.component.scss
+++ b/src/app/components/plan-it/plan-it.component.scss
@@ -1,6 +1,5 @@
 .plan-it-container {
   padding: 24px;
-  height: calc(100vh - 97px);
   display: flex;
   flex-direction: column;
   gap: 16px;
