--- a/src/app/components/task-view/task-view.component.scss
+++ b/src/app/components/task-view/task-view.component.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   gap: 16px;
   position: relative;
-  min-height: calc(100vh - 97px);
+  min-height: 0;
 
   .task-view-header {
     margin-bottom: 24px;
